[tool.poetry]
name = "ireland-property-analysis"
version = "0.1.0"
description = "Property price and BER analysis for Ireland"
authors = ["youssef abdalla <yorahman@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
geopandas = "^1.0.0"
requests = "^2.31.0"